# pycanha

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pycanha/: __init__.py
src/pycanha/gmm/: __init__.py  primitives.py
src/pycanha/parameters/: __init__.py  entity.py  formula.py  formulas.py  parameters.py
src/pycanha/solvers/: __init__.py  solver.py  ss.py  sslu.py  ts.py  tscn.py  tscnrl.py  tscnrlds.py
src/pycanha/tmm/: __init__.py  conductivecouplings.py  coupling.py  couplingmatrices.py  couplings.py  node.py  nodes.py  radiativecouplings.py  thermaldata.py  thermalmathematicalmodel.py  thermalnetwork.py
tests/solvers/: test_sslu.py  test_tscnrlds.py
tests/tmm/: test_nodes.py
